<resources>
    <string name="app_name">CS146MovieApp</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="error_title">error retrieving titles</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="signup">Sign Up!</string>
    <string name="signup_error_title">Error Signing Up</string>
    <string name="signup_error_messsage">One of the fields is empty!</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="username">Enter Username</string>
    <string name="view_movies">View Movies</string>
    <string name="log_out">Log Out</string>
    <string name="login_error_title">Error Signing In</string>
    <string name="facebook_app_id">hello</string>
    <string name="app_label">MoviesApp</string>
    <string name="search_movie_hint">Search for a Movie</string>
    <string name="search_hint">Search for movie</string>
    <string name="view_users">View Users</string>
    <string name="empty_friends_label"/>
    <string name="refresh_list">Refresh List</string>
    <string name="add_friends_to_begin">Add friends to begin</string>
    <string name="hello_world">hello world</string>
    <string name="search_results">Search Results!</string>
    <string name="search_activity">SearchActivity</string>
    <string name="search_title">search title</string>
</resources>
